apps/he/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: he-gateway
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  ingressClassName: traefik
  rules:
    - host: he.k3s.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: he-gateway
                port:
                  number: 8080
